adding parent url to config

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Department of Labor Case Study
 description: Lowering the Barrier to Entry to Government Data By Making It Accessible To Developers of all Skill Levels
 url: http://project-open-data.github.com/Labor_OpenData_CaseStudy
 repo_url: https://github.com/project-open-data/Labor_OpenData_CaseStudy
+project_open_data_url: http://project-open-data.github.com
 prose_url: http://project-open-data.github.com/prose/#
 branch: gh-pages
 
